--- a/article3.html
+++ b/article3.html
@@ -27,7 +27,7 @@
         <!-- Variation 3: Right-Aligned Image with Text Wrapping -->
         <article class="right-image-article">
             <img src="https://images.unsplash.com/photo-1451187863213-d1bcbaae3fa3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1160&q=80" alt="Article Image">
-            <div>
+            <div class="text-container">
                 <h1>Diving Deep: Underwater Cooling Computer Hardware</h1>
 
                 <p>In the realm of cutting-edge technology, a groundbreaking solution has emerged to tackle the persistent challenge of cooling high-performance computer hardware: underwater cooling. This innovative approach holds the promise of revolutionizing the way we manage heat dissipation in data centers and commercial computing environments. By leveraging the natural thermal properties of water, underwater cooling opens up a new era of efficiency and sustainability in the world of computing.</p>
@@ -69,13 +69,14 @@
     <footer>
         <p>© 2023 Typographix</p>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
     </footer>
     <!-- Script -->
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/ecb1fa5ff2.js" crossorigin="anonymous"></script>
 </body>
 </html>
