--- a/article2.html
+++ b/article2.html
@@ -27,7 +27,7 @@
         <!-- Variation 2: Left-Aligned Image with Text Wrapping -->
         <article class="left-image-article">
             <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80" alt="Article Image">
-            <div class="text-container">
+            <div class="text-content">
                 <h1>Unveiling the Future: Quantum Leaps in Humanoid Robotics</h1>
 
                 <p>In a startling turn of events, the field of robotics has taken a monumental leap forward with the introduction of cutting-edge humanoid robots that blur the line between science fiction and reality. These awe-inspiring creations are not only reminiscent of the likes of Isaac Asimov's androids but also boast an uncanny resemblance to the human form, thanks to groundbreaking advancements in robotics and artificial intelligence.</p>
@@ -63,7 +63,7 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>© 2023 Typographix</p>
+        <small>&copy; 2023 Typographix</small>
         <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
