--- a/article1.html
+++ b/article1.html
@@ -27,7 +27,7 @@
         <!-- Variation 1: Centered Image -->
         <article class="centered-image-article">
             <img src="https://images.unsplash.com/photo-1614624532983-4ce03382d63d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1931&q=80" alt="Article Image">
-            <div class="text-container">
+            <div class="text-content">
                 <h1>Enhancing Productivity: Revolutionizing Modern Workspaces</h1>
 
                 <p>In the rapidly evolving landscape of work, the concept of productivity has taken center stage, prompting a radical transformation in the design and functionality of modern workspaces. Gone are the days of rigid cubicles and monotonous routines. Today's work environments are dynamic, flexible, and strategically engineered to optimize employee performance and well-being, resulting in a paradigm shift in how we approach work.</p>
@@ -69,7 +69,7 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>© 2023 Typographix</p>
+        <small>&copy; 2023 Typographix</small>
         <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
