--- a/article4.html
+++ b/article4.html
@@ -27,7 +27,7 @@
         <!-- Variation 2: Left-Aligned Image with Text Wrapping -->
         <article class="left-image-article">
             <img src="https://images.unsplash.com/photo-1487875961445-47a00398c267?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Article Image">
-            <div class="text-container">
+            <div class="text-content">
                 <h1>Harnessing the Breeze: The Future of Wind Energy</h1>
 
                 <p>In a world where sustainable energy sources are gaining paramount importance, wind energy emerges as a frontrunner in the race to combat climate change and ensure a cleaner, greener future. The relentless force of the wind, once harnessed only by traditional windmills, has evolved into a cutting-edge industry that is poised to reshape the global energy landscape.</p>
@@ -67,7 +67,7 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>© 2023 Typographix</p>
+        <small>&copy; 2023 Typographix</small>
         <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
