--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main">
         <!-- Main Featured Article -->
         <div class="featured-article">
-            <img src="https://images.unsplash.com/photo-1614624532983-4ce03382d63d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1931&q=80" alt="Featured Article Image">
+            <img src="https://images.unsplash.com/photo-1614624532983-4ce03382d63d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1931&q=80" alt="Computer Setup">
             <h1>Enhancing Productivity: Revolutionizing Modern Workspaces</h1>
             <p>In the rapidly evolving landscape of work, the concept of productivity has taken center stage, prompting a radical transformation in the design and functionality of modern workspaces. Gone are the days of rigid cubicles and monotonous routines...</p>
             <a href="article1.html">Read More</a>
@@ -35,7 +35,7 @@
         <div class="smaller-articles">
             <!-- Article 1 -->
             <div class="article">
-                <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80" alt="Article Image 1">
+                <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80" alt="Robot on bench">
                 <h2>Unveiling the Future: Quantum Leaps in Humanoid Robotics</h2>
                 <p>In a startling turn of events, the field of robotics has taken a monumental leap forward with the introduction of cutting-edge humanoid robots that blur the line between science fiction and reality...</p>
                 <a href="article2.html">Read More</a>
@@ -43,7 +43,7 @@
             
             <!-- Article 2 -->
             <div class="article">
-                <img src="https://images.unsplash.com/photo-1451187863213-d1bcbaae3fa3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1160&q=80" alt="Article Image 2">
+                <img src="https://images.unsplash.com/photo-1451187863213-d1bcbaae3fa3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1160&q=80" alt="Underwater Computer">
                 <h2>Diving Deep: Underwater Cooling Computer Hardware</h2>
                 <p>In the realm of cutting-edge technology, a groundbreaking solution has emerged to tackle the persistent challenge of cooling high-performance computer hardware: underwater cooling...</p>
                 <a href="article3.html">Read More</a>
@@ -51,7 +51,7 @@
             
             <!-- Article 3 -->
             <div class="article">
-                <img src="https://images.unsplash.com/photo-1487875961445-47a00398c267?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Article Image 3">
+                <img src="https://images.unsplash.com/photo-1487875961445-47a00398c267?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Windmill Farm">
                 <h2>Harnessing the Breeze: The Future of Wind Energy</h2>
                 <p>In a world where sustainable energy sources are gaining paramount importance, wind energy emerges as a frontrunner in the race to combat climate change and ensure a cleaner, greener future...</p>
                 <a href="article4.html">Read More</a>
@@ -61,12 +61,12 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2023 Typographix</p>
+        <small>&copy; 2023 Typographix</small>
         <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook-f" title="Facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter" title="Twitter (X)"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram" title="Instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in" title="LinkedIn"></i></a>
         </div>
     </footer>
     <!-- Script -->
