revised media queries

--- a/article1.html
+++ b/article1.html
@@ -23,7 +23,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main>
+    <main class="main">
         <!-- Variation 1: Centered Image -->
         <article class="centered-image-article">
             <img src="https://images.unsplash.com/photo-1614624532983-4ce03382d63d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1931&q=80" alt="Article Image">
