--- a/article2.html
+++ b/article2.html
@@ -23,7 +23,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main>
+    <main class="main">
         <!-- Variation 2: Left-Aligned Image with Text Wrapping -->
         <article class="left-image-article">
             <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80" alt="Article Image">
