--- a/article3.html
+++ b/article3.html
@@ -23,7 +23,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main>
+    <main class="main">
         <!-- Variation 3: Right-Aligned Image with Text Wrapping -->
         <article class="right-image-article">
             <img src="https://images.unsplash.com/photo-1451187863213-d1bcbaae3fa3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1160&q=80" alt="Article Image">
